Ajuste nas notificações pendentes